Find a largely bug-free solution to holding down the down button on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,14 @@
   }
 }
 
+html {
+  -webkit-touch-callout: none; /* Safari Touch */
+  -webkit-user-select: none; /* Webkit */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Edge*/
+  user-select: none;
+}
+
 body {
   margin: 0;
   font-family: Arial;
